--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
     "regenerator-runtime": "^0.10.3"
+  },
+  "dependencies": {
+    "ramda": "^0.23.0"
   }
 }
